# zenvx-prototype

./: README.md  install.sh  pyproject.toml  zenvx.desktop
.github/workflows/: build-iso.yml  ci.yml
debian/: control
iso/: README.md  build.sh  chroot-sources.list  zenvx-prototype.desktop
iso/archives/: zz-security.list.chroot
iso/hooks/: 999-fix-security-repo.chroot
iso/package-lists/: xfce.list.chroot
scripts/: doctor.sh  install-deps.sh  setup-debian-bookworm.sh
src/zenvx/: __main__.py  ai_agent.py  android.py  app.py  appimage.py  commands.py  desktop.py  doctor.py  gui.py  logger.py  registry.py  rpm.py  universal.py  utils.py  windows.py
tests/: test_ai_agent_mock.py  test_desktop_entries.py  test_registry.py  test_universal_detection.py
