[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenvx"
version = "0.1.0"
description = "ZenvX prototype universal app launcher for Debian Bookworm"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "ZenvX Prototype"}]
license = {text = "MIT"}
dependencies = []

[project.scripts]
zenvx = "zenvx.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
